// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToSelfClosingTagGenerator should convert properly for inline template 1`] = `
"
import { Component, Input } from '@angular/core';

@Component({
  template: \`
    <router-outlet  />
  \`
})
export class MyCmp {
}
"
`;

exports[`convertToSelfClosingTagGenerator should convert properly for inline template 2`] = `undefined`;

exports[`convertToSelfClosingTagGenerator should convert properly for templateUrl 1`] = `
"
import { Component, Input } from '@angular/core';

@Component({
  templateUrl: './my-file.html'
})
export class MyCmp {
}
"
`;

exports[`convertToSelfClosingTagGenerator should convert properly for templateUrl 2`] = `
"
<div>Hello</div>
<app-my-cmp1>123</app-my-cmp1>
<app-my-cmp1>123</app-my-cmp1>
<app-my-cmp2 test="hello">123</app-my-cmp2>
<app-my-cmp3
  test="hello">
  123
</app-my-cmp3>
<app-my-cmp4
  test="hello"
>
  123
</app-my-cmp4>
<app-my-cmp5
  test="hello"
>
  123
</app-my-cmp5>
<app-my-cmp10 test="hello"
  [test]="hello"
  (test)="hello()"
 />

<app-my-cmp11 test="hello"
  [test]="hello"
  (test)="hello()"
 />
<app-my-cmp12 test="hello"
 />
<input type="text" />

<app-my-cmp6 />
<app-my-cmp7 test="hello" />

<hello-world  />

<pagination count="1" [test]="hello" (test)="test"></pagination>

<pagination count="1" />

<hello-world  />

<hello-world12>
  <hello-world13>
    <hello-world14 count="1" [test]="hello" (test)="test"  />
      <hello-world15>
        <hello-world16  count="1" [test]="hello" (test)="test"  />
        <hello-world17 count="1" [test]="hello" (test)="test"  />
        <hello-world18 count="1" [test]="hello"
          (test)="test"
           />
      </hello-world15>
  </hello-world13>
</hello-world12>

<app-management *ngIf="
    categoryList &&
    ((test1 && test1.length > 0) ||
    (test && test.length > 0))
  "
  [test]="test > 2"
  [test]="test"
  (testEvent)="test.length > 0 ? test($event) : null"
  (testEvent2)="test1($event)" />
"
`;
